--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-    <h1>About</h1>
+    <h1>Welcome to App</h1>
     <p class="lead">This example is a quick exercise to illustrate how the laravel and angular works.</p>
 </div>
