--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,18 +1,31 @@
-<div>
-    <form class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal">Login</h1>
-        
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required autofocus>
-        
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control mb-2" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-            <input type="checkbox" value="remember-me"> Remember me
-            </label>
+<div class="col-md-8 offset-2"> 
+    <div class="card">
+        <div class="card-header">Login</div>
+        <div class="card-body">
+            <form class="form-signin" #loginForm=ngForm (ngSubmit)="onSubmit()">
+                <div class="alert alert-danger" [hidden]="!errors">
+                    {{ errors }}
+                </div>
+                
+                <label for="inputEmail" class="sr-only">Email address</label>
+                <input type="email" id="email" name="email" class="form-control mb-3" placeholder="Email address" [(ngModel)]="form.email" required autofocus>
+                
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" id="password" name="password" class="form-control mb-2" placeholder="Password" [(ngModel)]="form.password" required>
+                <!-- <div class="checkbox mb-3">
+                    <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                </div> -->
+                <div class="d-flex justify-content-between mt-3">
+                    <div><button class="btn btn-md btn-primary btn-block" type="submit" [disabled]="!loginForm.valid">Login</button></div>
+                    <div><button class="btn btn-md btn-info btn-block" type="button" routerLink="/register">Register</button></div>
+                </div>
+                
+            </form>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
-    </form>
+        <div class="card-footer">
+            <p class="text-muted">&copy; 2019</p>
+        </div>
+    </div>
 </div>
