--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,18 +1,35 @@
-<div>
-    <form class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal">Register</h1>
-        
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required autofocus>
-        
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control mb-2" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-            <input type="checkbox" value="remember-me"> Remember me
-            </label>
+<div class="col-md-8 offset-2"> 
+        <div class="card">
+            <div class="card-header">Register</div>
+            <div class="card-body">
+                <form class="form-signin" #registerForm=ngForm (ngSubmit)="onSubmit()">
+                    <label for="inputName" class="sr-only">Name</label>
+                    <input type="text" id="name" name="name" class="form-control mb-3" placeholder="Name" [(ngModel)]="form.name" required autofocus>
+                    <div class="alert alert-sm alert-danger" [hidden]="!errors.name">
+                        {{ errors.name }}
+                    </div>
+
+                    <label for="inputEmail" class="sr-only">Email address</label>
+                    <input type="email" id="email" name="email" class="form-control mb-3" placeholder="Email address" [(ngModel)]="form.email" required>
+                    <div class="alert alert-sm alert-danger" [hidden]="!errors.email">
+                        {{ errors.email }}
+                    </div>
+                    
+                    <label for="confirmPassword" class="sr-only">Password</label>
+                    <input type="password" id="password" name="password" class="form-control mb-2" placeholder="Password" [(ngModel)]="form.password" required>
+
+                    <label for="confirmPassword" class="sr-only">Confirm Password</label>
+                    <input type="password" id="password_confirmation" name="password_confirmation" class="form-control mb-2" placeholder="Confirm Password" [(ngModel)]="form.password_confirmation" required>
+                    <div class="alert alert-sm alert-danger" [hidden]="!errors.password">
+                        {{ errors.password }}
+                    </div>
+                    
+                    <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!registerForm.valid">Register</button>
+                    
+                </form>
+            </div>
+            <div class="card-footer">
+                <p class="text-muted">&copy; 2019</p>
+            </div>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
-    </form>
-</div>
+    </div>
