--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -27,3 +27,11 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
+
+  .ng-invalid:not(form) {
+    border-left: 5px solid red;
+  }
+
+  .ng-valid:not(form) {
+    border-left: 5px solid green;
+  }
