--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,4 @@
-<p>profile works!</p>
+<div class="jumbotron">
+    <h1>Profile</h1>
+    <p class="lead">This example is a quick exercise to illustrate how the laravel and angular works.</p>
+</div>
