--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<ng-snotify></ng-snotify>
 <main role="main" class="container">
   <router-outlet></router-outlet>
 </main>
