--- a/src/app/components/password/response-reset/response-reset.component.html
+++ b/src/app/components/password/response-reset/response-reset.component.html
@@ -1,1 +1,23 @@
-<p>response-reset works!</p>
+<div class="col-md-8 offset-2"> 
+        <div class="card">
+            <div class="card-header">Reset Password</div>
+            <div class="card-body">
+                <form class="form-signin" #resetForm=ngForm (ngSubmit)="onSubmit()">                    
+                    <label for="inputEmail" class="sr-only">Email address</label>
+                    <input type="email" id="email" name="email" class="form-control mb-3" placeholder="Email address" [(ngModel)]="form.email" required autofocus>
+                    <span class="text-danger" [hidden]="!errors.email">{{ errors.email }}</span>
+
+                    <label for="inputPassword" class="sr-only mt-2">Password</label>
+                    <input type="password" id="password" name="password" class="form-control mb-2" placeholder="New Password" [(ngModel)]="form.password" required>
+
+                    <label for="inputPassword" class="sr-only mt-2">New Password</label>
+                    <input type="password" id="password_confirmation" name="password_confirmation" class="form-control mb-2" placeholder="Confirm Password" [(ngModel)]="form.password_confirmation" required>
+                    <span class="text-danger" [hidden]="!errors.email">{{ errors.password }}</span>
+                    
+                    <div class="d-flex justify-content-between mt-3">
+                        <div><button class="btn btn-md btn-primary btn-block" type="submit" [disabled]="!resetForm.valid">Reset</button></div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
